updated index.html file also made some changes in CSS file, add resume.

--- a/index.html
+++ b/index.html
@@ -46,34 +46,21 @@
                 <div class="hero-intro">
 
                     <p class="text">Hello & Greetings!</p>
-                    <h1 class="title">Hey there I 'm<br><span class="hero-name">Reon Fernandes</span>
+                    <h1 class="title">I am<br><span class="hero-name">Reon Fernandes</span>
+                        <br>
+                        <span>from <span class="country">India.</span></span>
                     </h1>
                     <p class="text">
-                        Blockchain is a system of records to transact value (not just money!) in
-                        a peer-to-peer fashion. What it means is that there is no need for a trusted
-                        intermediary such as banks, brokers, or other escrow services to serve as a
-                        trusted third party.
+                        Well am a Tech Enthusiast and Software Engineer. Apparently! I am Passionate and Mastering
+                        the art of solving real-world problems with a goal of turning complex problems into simple,
+                        elegant way. 
                     </p>
 
                     <div class="call-for-action">
-                        <button class="btn">Download CV</button>
+                        <button class="btn" onclick="window.open('Reon Fernandes resume.pdf', '_blank')">Download CV</button>
                         <button class="btn contact-btn">Contact Info</button>
                     </div>
-
-                    <!-- <div class="social-links">
-                        <p class="text">Profiles:</p>
-
-                        <img src="assets/icons/linkedin.svg" alt="LinkedIn"
-                            onclick="window.open('https://www.linkedin.com/in/reon-fernandes-9b173824a/', '_blank')">
-
-                        <img src="assets/icons/github.svg" alt="Github"
-                            onclick="window.open('https://github.com/FernandesReon', '_blank')">
-
-                        <img src="assets/icons/instagram.svg" alt="Instagram"
-                            onclick="window.open('https://instagram.com', '_blank')">
-                    </div> -->
                 </div>
-
 
                 <div class="hero-image image">
                     <img src="assets/images/Reon.jpg" alt="Reon Fernandes Image">
