--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <div class="call-for-action">
                         <button class="btn" onclick="window.open('Reon Fernandes resume.pdf', '_blank')">Download CV</button>
-                        <button class="btn contact-btn">Contact Info</button>
+                        <button class="btn contact-btn" onclick="window.open('https://www.linkedin.com/in/reon-fernandes-9b173824a/', '_blank')">Contact Info</button>
                     </div>
                 </div>
 
