added a animation for hero image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="hero-image image">
-                    <img src="assets/images/Reon.jpg" alt="Reon Fernandes Image">
+                    <img src="assets/images/ReonFernandes.jpg" alt="Reon Fernandes Image">
                 </div>
             </div>
         </div>
