about section ready. satisfied so far, media query for mobile device required.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     <ul class="navlist">
                         <li><a href="#home" class="navlink">Home</a></li>
                         <li><a href="#about" class="navlink">About</a></li>
-                        <li><a href="#services" class="navlink">Services</a></li>
                         <li><a href="#portfolio" class="navlink">Portfolio</a></li>
                         <li><a href="#contact" class="navlink">Contact</a></li>
                         <button class="btn">Hire Me</button>
@@ -45,7 +44,7 @@
             <div class="container hero-container">
                 <div class="hero-intro">
 
-                    <p class="text">Hello & Greetings!</p>
+                    <p class="text">Hello and Greetings!</p>
                     <h1 class="title">I am<br><span class="hero-name">Reon Fernandes</span>
                         <br>
                         <span>from <span class="country">India.</span></span>
@@ -53,12 +52,15 @@
                     <p class="text">
                         Well am a Tech Enthusiast and Software Engineer. Apparently! I am Passionate and Mastering
                         the art of solving real-world problems with a goal of turning complex problems into simple,
-                        elegant way. 
+                        elegant way.
                     </p>
 
                     <div class="call-for-action">
-                        <button class="btn" onclick="window.open('Reon Fernandes resume.pdf', '_blank')">Download CV</button>
-                        <button class="btn contact-btn" onclick="window.open('https://www.linkedin.com/in/reon-fernandes-9b173824a/', '_blank')">Contact Info</button>
+                        <button class="btn" onclick="window.open('Reon Fernandes resume.pdf', '_blank')">Download
+                            CV</button>
+                        <button class="btn contact-btn"
+                            onclick="window.open('https://www.linkedin.com/in/reon-fernandes-9b173824a/', '_blank')">Contact
+                            Info</button>
                     </div>
                 </div>
 
@@ -68,6 +70,46 @@
             </div>
         </div>
     </header>
+
+    <section id="about" class="about">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="title" data-title="Know me More">About Me</h3>
+            </div>
+
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img src="./assets/images/Reon.jpg" alt="Profile picture" class="about-pic" />
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="./assets/images/experience.png" alt="Experience icon" class="icon" />
+                            <h3 class="title-sm">Experience</h3>
+                            <p class="text">6+ months <br />Software Development</p>
+                        </div>
+                        <div class="details-container">
+                            <img src="./assets/images/education.png" alt="Education icon" class="icon" />
+                            <h3 class="title-sm">Education</h3>
+                            <p class="text">B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p class="text">
+                            Hi, I'm Reon Fernandes a passionate Tech Enthusiast. I am 23 years old. I was born on
+                            20<sup>th</sup>October
+                            in Vasai(W), India. Recently, I completed my Master's degree in Information Technology
+                            from St Gonsalo Gracia College. Over the period of my education, I gained significant
+                            knowledge in
+                            different Computer Science fields such as Cyber Security, Networking and Software
+                            Development. I thrive to solving
+                            complex problems and continue to expand my knowledge.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="assets/script/app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
