--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </div>
 
                 <div class="mobile-view-btns">
-                    <ion-icon name="menu-outline" class="icon-menu icon"></ion-icon>
-                    <ion-icon name="close-outline" class="icon-close icon"></ion-icon>
+                    <ion-icon name="menu-outline" class="icon-menu nav-icon"></ion-icon>
+                    <ion-icon name="close-outline" class="icon-close nav-icon"></ion-icon>
                 </div>
             </div>
         </nav>
