--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     </div>
                 </div>
 
-                <!-- <div class="projects project4">
+                <div class="projects project4">
                     <img src="assets/images/weather-forecast.svg" alt="project image">
                     <div class="project-container">
                         <article class="article">
@@ -333,7 +333,7 @@
                             </div>
                         </article>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
