--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     <div class="name">Reon</div>
                 </div>
 
+                <!--Desktop View-->
+
                 <div class="navbar">
                     <ul class="navlist">
                         <li><a href="#home" class="navlink">Home</a></li>
@@ -36,6 +38,8 @@
                     </ul>
                 </div>
 
+                <!--Mobile Navigation-->
+
                 <div class="mobile-view-btns">
                     <ion-icon name="menu-outline" class="icon-menu nav-icon"></ion-icon>
                     <ion-icon name="close-outline" class="icon-close nav-icon"></ion-icon>
@@ -43,11 +47,12 @@
             </div>
         </nav>
 
+        <!--Hero Section-->
+
         <div class="header-content" id="home">
 
             <div class="container hero-container">
                 <div class="hero-intro">
-
                     <p class="text">Hello and Greetings!</p>
                     <h1 class="title">I am<br><span class="hero-name">Reon Fernandes</span>
                         <br>
@@ -75,6 +80,8 @@
         </div>
     </header>
 
+    <!--About Section-->
+
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
@@ -83,7 +90,8 @@
 
             <div class="section-container">
                 <div class="section__pic-container">
-                    <img src="./assets/images/Reon.jpg" alt="Profile picture" class="about-pic" oncontextmenu="return false;"/>
+                    <img src="./assets/images/Reon.jpg" alt="Profile picture" class="about-pic"
+                        oncontextmenu="return false;" />
                 </div>
                 <div class="about-details-container">
                     <div class="about-containers">
@@ -118,6 +126,8 @@
         </div>
     </section>
 
+    <!--Experience Section-->
+
     <section class="experience" id="experience">
         <div class="container">
             <div class="section-header">
@@ -127,6 +137,7 @@
             <div class="experience-detail-container">
 
                 <!--Frontend Container-->
+
                 <div class="expr frontend">
                     <h3 class="title-sm">Frontend Development</h3>
                     <div class="article-container">
@@ -158,7 +169,9 @@
                         </article>
                     </div>
                 </div>
+
                 <!--Backend Container-->
+
                 <div class="expr backend">
                     <h3 class="title-sm">Backend Development</h3>
                     <div class="article-container">
@@ -206,7 +219,9 @@
                         </article>
                     </div>
                 </div>
+
                 <!--Database Container-->
+
                 <div class="expr database">
                     <h3 class="title-sm">Database</h3>
                     <div class="article-container">
@@ -231,6 +246,7 @@
                 </div>
 
                 <!--Operating System Container-->
+
                 <div class="expr system">
                     <h3 class="title-sm">Operating Systems</h3>
                     <div class="article-container">
@@ -257,6 +273,8 @@
         </div>
     </section>
 
+    <!--Portfolio Section-->
+
     <section class="portfolio" id="portfolio">
         <div class="container">
             <div class="section-header">
@@ -274,8 +292,10 @@
                             </p>
 
                             <div class="project-btns">
-                                <button class="btn" onclick="window.open('https://github.com/FernandesReon/OIBSIP_TaskNo1_Online_Reservation_System', '_blank')">Github</button>
-                                <button class="btn" style="background-color: #0077B5;" onclick="window.open('https://www.linkedin.com/posts/reon-fernandes-9b173824a_javadevelopment-internshipproject-softwareengineering-activity-7203761152894357506-Oh-G?utm_source=share&utm_medium=member_desktop', '_blank')">LinkedIn</button>
+                                <button class="btn"
+                                    onclick="window.open('https://github.com/FernandesReon/OIBSIP_TaskNo1_Online_Reservation_System', '_blank')">Github</button>
+                                <button class="btn" style="background-color: #0077B5;"
+                                    onclick="window.open('https://www.linkedin.com/posts/reon-fernandes-9b173824a_javadevelopment-internshipproject-softwareengineering-activity-7203761152894357506-Oh-G?utm_source=share&utm_medium=member_desktop', '_blank')">LinkedIn</button>
                             </div>
                         </article>
                     </div>
@@ -291,8 +311,10 @@
                             </p>
 
                             <div class="project-btns">
-                                <button class="btn" onclick="window.open('https://github.com/FernandesReon/Basic-Banking-System', '_blank')">Github</button>
-                                <button class="btn" style="background-color: #FF0000;" onclick="window.open('https://youtu.be/5PBJHSkFqgw?si=9Qx4WP8jYJNsJor2'), '_blank'">Youtube</button>
+                                <button class="btn"
+                                    onclick="window.open('https://github.com/FernandesReon/Basic-Banking-System', '_blank')">Github</button>
+                                <button class="btn" style="background-color: #FF0000;"
+                                    onclick="window.open('https://youtu.be/5PBJHSkFqgw?si=9Qx4WP8jYJNsJor2'), '_blank'">Youtube</button>
                             </div>
                         </article>
                     </div>
@@ -310,8 +332,10 @@
                             </p>
 
                             <div class="project-btns">
-                                <button class="btn" onclick="window.open('https://github.com/FernandesReon/OIBSIP_Task2_Number_Guess', '-_blank')">Github</button>
-                                <button class="btn" style="background-color: #0077B5;" onclick="window.open('https://www.linkedin.com/posts/reon-fernandes-9b173824a_javadevelopment-internshipproject-softwareengineering-activity-7203764990653206529-Ik-6?utm_source=share&utm_medium=member_desktop', '_blank')">LinkedIn</button>
+                                <button class="btn"
+                                    onclick="window.open('https://github.com/FernandesReon/OIBSIP_Task2_Number_Guess', '-_blank')">Github</button>
+                                <button class="btn" style="background-color: #0077B5;"
+                                    onclick="window.open('https://www.linkedin.com/posts/reon-fernandes-9b173824a_javadevelopment-internshipproject-softwareengineering-activity-7203764990653206529-Ik-6?utm_source=share&utm_medium=member_desktop', '_blank')">LinkedIn</button>
                             </div>
                         </article>
                     </div>
@@ -323,7 +347,7 @@
                         <article class="article">
                             <h3 class="title-sm">Weather Application</h3>
                             <p class="text">Weather Application that is developed using Java as
-                                main language for building the logic. It use Open Weather Api to 
+                                main language for building the logic. It use Open Weather Api to
                                 get data at given point on time.
                             </p>
 
@@ -337,6 +361,82 @@
             </div>
         </div>
     </section>
+
+    <!--Contact Section-->
+
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="section-header">
+                <h3 class="title" data-title="Get In Touch">Contact</h3>
+            </div>
+
+            <div class="contact-detail-container">
+                <div class="google-location contact">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d71614.9355764302!2d72.76026202886821!3d19.37796602041551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ac2abaef9c61%3A0x502296ab15284f0c!2sVasai%20West%2C%20Vasai-Virar%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1718459988518!5m2!1sen!2sin"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="contact-info contact">
+                    <h3 class="title">Get in touch</h3>
+                    <p class="text">
+                        Here are my contact details.
+                    </p>
+
+                    <div class="information-container">
+
+                        <!--Location-->
+                        <div class="information">
+                            <div class="contact-icon">
+                                <ion-icon name="location"></ion-icon>
+                            </div>
+                            <p>Vasai (West) 401201</p>
+                        </div>
+
+                        <!--Email-->
+                        <div class="information">
+                            <div class="contact-icon">
+                                <ion-icon name="mail"></ion-icon>
+                            </div>
+                            <p>reondias@gmail.com</p>
+                        </div>
+
+                        <!--Phone-->
+                        <div class="information">
+                            <div class="contact-icon">
+                                <ion-icon name="call"></ion-icon>
+                            </div>
+                            <p>+91 7498722797</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-form contact">
+                    <h3 class="title">Contact Me</h3>
+                    <div class="row">
+
+                        <input type="text" name="first_name" id="first_name" class="input-field" placeholder="First Name" required autocomplete="off">
+
+                        <input type="text" name="last_name" id="last_name" class="input-field" placeholder="Last Name" required autocomplete="off">
+
+                    </div>
+
+                    <div class="row">
+
+                        <input type="text" name="phone" id="phone" class="input-field" placeholder="Phone Number" autocomplete="off">
+
+                        <input type="email" name="email" id="email" class="input-field" placeholder="Email" required autocomplete="off">
+
+                    </div>
+
+                    <div class="row">
+                        <textarea name="message" id="message" class="input-field textarea" placeholder="Message"></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="assets/script/app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
