just made slight changes in hero text

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                         <span>from <span class="country">India.</span></span>
                     </h1>
                     <p class="text">
-                        Well am a Tech Enthusiast and Software Engineer. Apparently! I am Passionate and Mastering
-                        the art of solving real-world problems with a goal of turning complex problems into simple,
-                        elegant way.
+                        Well, am a Tech Enthusiast and Software Engineer. Apparently! I am Passionate and Mastering the
+                        art of solving real-world problems with the goal of turning complex problems into simple,
+                        elegant ways.
                     </p>
 
                     <div class="call-for-action">
