--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                         <li><a href="#experience" class="navlink">Experience</a></li>
                         <li><a href="#portfolio" class="navlink">Portfolio</a></li>
                         <li><a href="#contact" class="navlink">Contact</a></li>
-                        <button class="btn">Hire Me</button>
+                        <button class="btn" style="background-color: var(--casualColor);"
+                            onclick="window.open('mailto:reonjervasiofernandes@gmail.com')">
+                            Hire Me
+                        </button>
+
                     </ul>
                 </div>
 
@@ -67,8 +71,7 @@
                     <div class="call-for-action">
                         <button class="btn" onclick="window.open('Reon Fernandes resume.pdf', '_blank')">Download
                             CV</button>
-                        <button class="btn contact-btn"
-                            onclick="window.open('https://www.linkedin.com/in/reon-fernandes-9b173824a/', '_blank')">Contact
+                        <button class="btn contact-btn" onclick="location.href='#contact-details'">Contact
                             Info</button>
                     </div>
                 </div>
@@ -371,7 +374,7 @@
                     <h3 class="title" data-title="Get In Touch">Contact</h3>
                 </div>
 
-                <div class="contact-detail-container">
+                <div class="contact-detail-container" id="contact-details">
                     <div class="google-location contact">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d71614.9355764302!2d72.76026202886821!3d19.37796602041551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ac2abaef9c61%3A0x502296ab15284f0c!2sVasai%20West%2C%20Vasai-Virar%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1718459988518!5m2!1sen!2sin"
