commented project 4. Still in progress

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         </div>
                     </div>
 
-                    <div class="projects project4">
+                    <!-- <div class="projects project4">
                         <img src="assets/images/weather-forecast.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -357,11 +357,11 @@
 
                                 <div class="project-btns">
                                     <button class="btn">Github</button>
-                                    <button class="btn" style="background-color: #228B22;">Live Demo</button>
+                                    <button class="btn" style="background-color: #228B22;">In Progress</button>
                                 </div>
                             </article>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
