added new project (weather app)

--- a/index.html
+++ b/index.html
@@ -286,7 +286,25 @@
                 </div>
 
                 <div class="project-detail-container">
-                    <div class="projects project1">
+
+                    <div class="projects project1 weather">
+                        <img src="assets/images/weather.png" alt="project image">
+                        <div class="project-container">
+                            <article class="article">
+                                <h3 class="title-sm">Weather Application</h3>
+                                <p class="text">Weather Application that is developed using Java as
+                                    main language for building the backend functionality logic to process API data. It use Open Weather Api to
+                                    get data at given point on time.
+                                </p>
+
+                                <div class="project-btns">
+                                    <button class="btn" onclick="window.open('https://github.com/FernandesReon/Java-Weather_App', '_blank')">Github</button>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+
+                    <div class="projects project2">
                         <img src="assets/images/reservation.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -304,7 +322,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="projects project2">
+                    <div class="projects project3">
                         <img src="assets/images/banking.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -324,7 +342,7 @@
                         </div>
                     </div>
 
-                    <div class="projects project3">
+                    <div class="projects project4">
                         <img src="assets/images/guessing.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -345,23 +363,7 @@
                         </div>
                     </div>
 
-                    <!-- <div class="projects project4">
-                        <img src="assets/images/weather-forecast.svg" alt="project image">
-                        <div class="project-container">
-                            <article class="article">
-                                <h3 class="title-sm">Weather Application</h3>
-                                <p class="text">Weather Application that is developed using Java as
-                                    main language for building the logic. It use Open Weather Api to
-                                    get data at given point on time.
-                                </p>
-
-                                <div class="project-btns">
-                                    <button class="btn">Github</button>
-                                    <button class="btn" style="background-color: #228B22;">In Progress</button>
-                                </div>
-                            </article>
-                        </div>
-                    </div> -->
+                    
                 </div>
             </div>
         </section>
