updated project section

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         </div>
                     </div>
 
-                    <div class="projects project2">
+                    <!-- <div class="projects project2">
                         <img src="assets/images/reservation.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -321,8 +321,8 @@
                                 </div>
                             </article>
                         </div>
-                    </div>
-                    <div class="projects project3">
+                    </div> -->
+                    <!-- <div class="projects project3">
                         <img src="assets/images/banking.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -340,9 +340,9 @@
                                 </div>
                             </article>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="projects project4">
+                    <!-- <div class="projects project4">
                         <img src="assets/images/guessing.svg" alt="project image">
                         <div class="project-container">
                             <article class="article">
@@ -361,7 +361,7 @@
                                 </div>
                             </article>
                         </div>
-                    </div>
+                    </div> -->
 
                     
                 </div>
@@ -500,7 +500,7 @@
                     </p>
                     <ul>
                         <li>
-                            <a href="https://www.linkedin.com/in/reon-fernandes-9b173824a/" target="_blank">
+                            <a href="https://www.linkedin.com/in/reon-fernandes/" target="_blank">
                                 <ion-icon name="logo-linkedin"></ion-icon>
                                 LinkedIn </a>
                         </li>
